--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
@@ -13,12 +13,12 @@
      {% endif %}
 
      {% if flashmovie.author %}
-       <div class="author_container"><span class="author">{% trans "By" %} {{ flashmovie.author }}</span></div>
+       <div class="author_container meta-content"><span class="author">{% trans "By" %} {{ flashmovie.author }}</span></div>
      {% endif %}
 
     {% if flashmovie.tags %}
-        <div><span class="tags">
-          {% trans "Tags" %}:
+        <div class="meta-content"><span class="tags">
+          <span class="tags-label">{% trans "Tags" %}:</span>
           {% tags_for_object flashmovie as flashmovie_tags %}
           {% for tag in flashmovie_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
