--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_footer.html
@@ -3,7 +3,7 @@
   {% include 'collections/categories_navigation_block.html' %}
 
   {% if media.tags %}
-  <div><span class="tags">{% trans "Tags" %}: {{ media.tags }}</span></div>
+  <div><span class="tags"><span class="tags-label">{% trans "Tags" %}:</span> {{ media.tags }}</span></div>
   {% endif %}
 
 
