--- a/cyclope/templates/cyclope/themes/neutronica/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/neutronica/two_sidebars.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 
-<div id="right_sidebar_container">
+<div id="right_sidebar_container" class="sidebar">
   <div class="top"></div>
   <div class="box">
     {% region 'right_sidebar'%}
