--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
@@ -18,7 +18,7 @@
 
      {% if picture.tags %}
         <div><span class="tags">
-          {% trans "Tags" %}:
+          <span class="tags-label">{% trans "Tags" %}:</span>
           {% tags_for_object picture as picture_tags %}
           {% for tag in picture_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
