--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -1,5 +1,6 @@
 {% load i18n comments %}
 
+  {% include 'collections/categories_navigation_block.html' %}
 
   <h1 class="title">{{ current_object.name }}</h1>
 
@@ -23,6 +24,3 @@
   </span></div>
   {% endif %}
   <!-- /autor -->
-
-
-
