--- a/cyclope/templates/registration/password_change_form.html
+++ b/cyclope/templates/registration/password_change_form.html
@@ -4,7 +4,14 @@
 {% block page_content %}
 
 <div id="content_container">
-  {{ form }}
+  <div class="user_input">
+    <form enctype="multipart/form-data" method="post">
+      {{ form.as_p }}
+      <p class="submit">
+        <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
+      </p>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
