--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -5,20 +5,24 @@
 {% block content %}
 
   <div class="collection {{ collection.slug }}">
-    {% if collection.visible %}
-    <big class="title">{{ collection.name }}</big>
-    {% endif %}
+    <div class="collection_header">
+      {% if collection.visible %}
+        <big class="title">{{ collection.name }}</big>
 
-    {% if collection.image %}
-    <img class="image" src="{% version collection.image.path 'medium' %}" border="0"/>
-    {% endif %}
+        {% if collection.image %}
+        <img class="image" src="{% version collection.image.path 'medium' %}" border="0"/>
+        {% endif %}
 
-    {% if collection.description %}
-    <div class="text">
-      {{ collection.description|safe }}
+        {% if collection.description %}
+        <div class="text">
+          {{ collection.description|safe }}
+        </div>
+        {% endif %}
+      {% endif %}
     </div>
-    {% endif %}
 
+    <br class="clear"/>
+    
     {% for category in categories %}
 
     <div class="category teaser {% if category.image %}clear_right{% endif%}" >
