--- a/cyclope/media/themes/neutronica/css/bijouterie.css
+++ b/cyclope/media/themes/neutronica/css/bijouterie.css
@@ -155,7 +155,7 @@ a {
  padding: 0 16px 12px 16px;
  margin: 0 16px 22px 16px;
  border: none;
- border-bottom: 2px solid #839882;
+ /* border-bottom: 2px solid #839882; */
  display: block;
 }
 
@@ -300,6 +300,10 @@ a {
  font-weight: bold;
  font-size: 14px;
  color: white;
+}
+
+.expand_collapse {
+ cursor:pointer;
 }
 
 .sidebar .categories_hierarchy ul li:hover {
@@ -489,6 +493,20 @@ position:absolute;
 
 #content_container .picture img.icon {
  margin: 0 !important;
+}
+
+/* user_input */
+
+.user_input input,
+.user_input textarea {
+border:1px solid #839882;
+margin:0 0 10px;
+padding:4px;
+}
+
+.user_input form{
+ padding: 0.5em 0; 
+ border: none;
 }
 
 /* */
