--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
@@ -6,7 +6,7 @@
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png"/>
       <img src="{% version movieclip.still.path 'thumbnail' %}" width="124" />
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video-medium.png"/>
+      <div class="crop_container"><img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video-medium.png"/></div>
       {% endif %}
 
     </a>
